# revelai-backend

./: .dockerignore  .env.example  Dockerfile  README.md  logger.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/: contratacao.py  evolucao.py  implementacao.py  llm.py  uso.py
app/api/v1/: router.py
app/api/v1/endpoints/: analises.py  clientes.py  dados.py  evolucao.py  implementacao.py  jornada.py  uso.py
app/api/v1/schemas/: analises.py  clientes.py  evolucao.py  implementacao.py  jornada.py  reunioes.py  uso.py
app/core/: settings.py
app/core/db/: mongo_manager.py
app/models/: __init__.py  analises.py  clientes.py  documentos.py  evolucoes.py  historico.py  produtos.py  reuniao.py  tasks.py  treinamentos.py  usos.py
app/repositories/: analises.py  base.py  clientes.py  documentos.py  evolucoes.py  produtos.py  reunioes.py  tasks.py  treinamentos.py  usos.py
app/services/: analises.py  clientes.py  documentos.py  evolucao.py  implementacao.py  jornada.py  produtos.py  reunioes.py  uso.py
scripts/: populate.py
